<resources>
    <string name="empty">empty</string>
    <string name="name_title">Name:</string>
    <string name="description_title">Description:</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="id_title">Id:</string>
    <string name="number_of_series_where_appears">Number of series where appears:</string>
    <string name="number_of_comics_where_appears">Number of comics where appears:</string>
    <string name="number_of_stories_where_appears">Number of stories where appears:</string>
    <string name="number_of_events_where_appears">Number of events where appears:</string>
    <string name="alert">Alert!</string>
</resources>