<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/sixteen"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvHeroId"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_title" />

        <TextView
            android:id="@+id/tvHeroIdValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

        <TextView
            android:id="@+id/tvHeroDescription"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/description_title" />

        <TextView
            android:id="@+id/tvHeroDescriptionValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

        <TextView
            android:id="@+id/tvHeroSeriesNumber"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/number_of_series_where_appears" />

        <TextView
            android:id="@+id/tvHeroSeriesNumberValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

        <TextView
            android:id="@+id/tvHeroComicsNumber"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/number_of_comics_where_appears" />

        <TextView
            android:id="@+id/tvHeroComicsNumberValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

        <TextView
            android:id="@+id/tvHeroStoriesNumber"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/number_of_stories_where_appears" />

        <TextView
            android:id="@+id/tvHeroStoriesNumberValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

        <TextView
            android:id="@+id/tvHeroEventsNumber"
            style="@style/hero_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/number_of_events_where_appears" />

        <TextView
            android:id="@+id/tvHeroEventsNumberValue"
            style="@style/hero_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>