<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/ivHeroPicture"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/eighty"
        android:layout_marginStart="@dimen/six"
        android:layout_marginTop="@dimen/six"
        android:layout_marginBottom="@dimen/six"
        android:adjustViewBounds="true"
        android:contentDescription="@string/empty"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTopSeparator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tvHeroName"
        style="@style/hero_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six"
        android:layout_marginTop="@dimen/six"
        android:text="@string/name_title"
        app:layout_constraintStart_toEndOf="@id/glVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeroNameValue"
        style="@style/hero_item_value"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six"
        android:layout_marginEnd="@dimen/six"
        android:text="@string/name_title"
        app:layout_constraintBaseline_toBaselineOf="@id/tvHeroName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHeroName"
        app:layout_constraintTop_toTopOf="@id/tvHeroName" />

    <TextView
        android:id="@+id/tvHeroDescription"
        style="@style/hero_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six"
        android:text="@string/description_title"
        app:layout_constraintStart_toStartOf="@id/tvHeroName"
        app:layout_constraintTop_toBottomOf="@id/tvHeroName" />

    <TextView
        android:id="@+id/tvHeroDescriptionValue"
        style="@style/hero_item_value"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six"
        android:layout_marginEnd="@dimen/six"
        android:ellipsize="end"
        android:maxLines="3"
        android:minLines="3"
        android:text="@string/description_title"
        app:layout_constraintBaseline_toBaselineOf="@id/tvHeroDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHeroDescription"
        app:layout_constraintTop_toTopOf="@id/tvHeroDescription" />

    <View
        android:id="@+id/vTopSeparator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:background="@color/blue_separator"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>